2007-10-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -ocsFolder]): create
	the folder even if the current user is not its owner.

2007-10-10  Ludovic Marcotte  <ludovic@inverse.ca>

	* We now send advisory emails when folders
	  are created / deleted.

	* Fixed the sending of advisory emails upon
	  ACL changes on folders.


2007-10-10  Ludovic Marcotte  <ludovic@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m
	Implemented event/task priority support.

	* SoObjects/Contacts/SOGoContactGCSFolder.m
	Added CardDAV support. 

	* SoObjects/SOGo/LDAPUserManager.m and SOGoUser.m
	Implemented From: based on LDAP results based on
	the MailFieldNames attribute (an array) specified
	in every LDAP-based authentication sources.

	* UI/MailPartViewers/UIxMailPartTextViewer.m and
	  UI/WebServerResources/MailerUI.css
	We avoid replacing "\r\n" and "\n" with <br /> and
	rather use CSS capabilities for proper formatting.
	This is _WAY_ faster on very large mails.
 
2007-10-10  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m
	([UIxComponentEditor -componentCalendar]): returns the calendar
	object of the current event.

2007-10-05  Ludovic Marcotte  <ludovic@inverse.ca>

	* UI/WebServerResources/MailerUI.js
	We check if at least one message is selected
	before performing a Reply/Reply All/Forward
	
	* SoObjects/Appointments/SOGoAppointmentFolder.m
	and others - implemented support for recurring
	events (with some known limitations right now,
	all soon to be fixed).
	
2007-10-04  Francis Lachapelle  <flachapelle@inverse.ca>

	* Main/SOGo.m ([SOGo -isUserName:_keyinContext:_ctx]): removed
	the constraint that a username can't start with a digit.

2007-10-02  Francis Lachapelle  <flachapelle@inverse.ca>

	* Moved SOPE/sope-gdl1/GDLContentStore from the default trunk
	repository to Inverse's branch.

2007-09-28  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Mailer/SOGoDraftObject.m 