@@ -1,3 +1,8 @@
+2007-10-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* UI/Common/UIxAclEditor.m ([UIxAclEditor -hasOwner]): new method
+	that returns whether the object has an owner or not.
+
 2007-10-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -ocsFolder]): create
